# diffusion-factorio

./: .gitignore  .gitkeep  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ANALYSIS.md  DESIGN.md  FACTORIO_EXPORT.md  GENERALIZATION.md  INFERENCE_AND_TRAINING.md  OBSERVABILITY.md  RL_ANALYSIS.md  ROADMAP.md  TRAINING_ANALYSIS.md  VIEWER.md
experiments/: ambiguity_demo.rs  blueprint_schema.rs  bus_tap.rs  canvas_curriculum.rs  gallery.rs  grid_shape.rs  issue_examples.rs  overlap_check.rs  reveal_schedule.rs  sampling_defaults.rs  task_space.rs  unbounded_sink.rs  why_zero.rs
src/: backend.rs  best_of_n.rs  blueprint.rs  data.rs  diffusion.rs  factory_gen.rs  lib.rs  metrics.rs  model.rs  observability.rs  persist.rs  sample.rs  serve.rs  sim.rs  textual.rs  throughput.rs  train.rs  viewer.rs  world.rs
src/serve/: index.html
tests/: blueprint_export.rs  observability.rs
