[package]
name = "diffusion-factorio"
version = "0.1.0"
edition = "2021"
description = "Discrete spatial diffusion models for generating Factorio blueprints, in Rust with the burn framework"
license = "MIT"
repository = "https://github.com/uselessgoddess/diffusion-factorio"

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "autodiff", "ndarray"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
base64 = "0.22"
flate2 = "1"

[features]
default = []
# Enable the wgpu backend (GPU training on the user's rx 9070 xt). Off by
# default so CI and unit tests build against the lightweight ndarray backend.
wgpu = ["burn/wgpu"]

[profile.release]
opt-level = 3
lto = "thin"

[dev-dependencies]
approx = "0.5"

# Experiments backing the claims in docs/TRAINING_ANALYSIS.md. Kept runnable so
# every number in that document can be re-derived rather than trusted.
[[example]]
name = "task_space"
path = "experiments/task_space.rs"

[[example]]
name = "blueprint_schema"
path = "experiments/blueprint_schema.rs"

[[example]]
name = "ambiguity_demo"
path = "experiments/ambiguity_demo.rs"

[[example]]
name = "overlap_check"
path = "experiments/overlap_check.rs"
